# pypulseq

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  VERSION  add_signature.py  files.txt  gre_adc_increased_dt.seqlite  gre_no_adc.seqlite  gre_no_readout.seqlite  gre_no_ro_grad.seqlite  gre_pypulseq.Philips-seq  gre_pypulseq.seq-lite  gre_pypulseq.seqlite  gre_pypulseq_256.seqlite  gre_pypulseq_256_200.seqlite  gre_pypulseq_64_200.seqlite  paper.bib  paper.md  pyproject.toml  setup.py  sigpy2pulseq.py  tse_pypulseq.seqlite  version.py  writeRadGradientEcho.py  writeRadialGradientEcho.py
.github/: dependabot.yml  requirements.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codespell.yml  pre-commit.yml  publish-to-pypi.yml  push_pr.yml  pytest.yml  report_pytest.yml
SAR/: SAR_calc.py
SAR_calc/: QGlobal.mat  SAR_calc_main.py  rad2d.seq  utest_SAR_calc.py
SAR_calc/assets/: external.seq
__temp_pipreqsnb_folder/: _pipreqsnb_temp_file.py
core/: compress_shape.py  holder.py  make_adc.py  make_block.py  make_delay.py  opts.py  parse_mr.py
core/Sequence/: sequence.py
core/utils/: k2g.py  vds_2d.py
doc/: readthedocs_requirements.txt
doc/source/: conf.py  index.rst  modules.rst  pypulseq.SAR.rst  pypulseq.Sequence.rst  pypulseq.rst  pypulseq.tests.rst  pypulseq.utils.SAR.rst  pypulseq.utils.rst  version.rst
doc/walkthrough/: gre_walkthrough.ipynb
examples/notebooks/: write_t2_se.ipynb
examples/scripts/: README.md  STYLE_GUIDE.md  demo_read.py  pns_test.py  soft_delay_simple_example.py  write_2Dt1_mprage.py  write_3Dt1_mprage.py  write_bssfp.py  write_epi.py  write_epi_label.py  write_epi_se.py  write_epi_se_rs.py  write_gre.py  write_gre_label.py  write_gre_label_softdelay.py  write_haste.py  write_mprage.py  write_radial_gre.py  write_radial_gre_rot.py  write_tse.py  write_ute.py
examples/tutorials/: 01_introduction.ipynb  02_rf_pulses.ipynb
interpreter/: demo_Philips_interpreter.py  demo_seqlite.py  seq2Philips.py  seq2seqlite.py  seq2seqlite_adaptive.py  seq2seqlite_adaptive_arxiv.py  util_seq2lite.py  util_seq2philips.py
pulse_sequence_demos/: gre_demo.py  se_demo.py
pulseq/: README.md  ir-se_python.seq
pulseq/core/: calc_duration.py  convert.py  decompress_shape.py  make_sinc.py  make_trap.py  makearbitrary_grad.py  makearbitrary_rf.py
pulseq/pulse_sequence_demos/: se_epi_demo.py  se_python.seq  spiral_2d_nshot.py
pypulseq/: __init__.py  add_gradients.py  add_ramps.py  align.py  block_to_events.py  calc_duration.py  calc_ramp.py  calc_rf_bandwidth.py  calc_rf_center.py  check_timing.py  compress_shape.py  convert.py  decompress_shape.py  event_lib.py  gre_pypulseq_sigpy_demo.py  gre_pypulseq_sigpy_demo1.py  gre_pypulseq_sigpy_demo2.py  make_adc.py  make_adiabatic_pulse.py  make_arbitrary_grad.py  make_arbitrary_rf.py  make_block.py  make_block_pulse.py  make_delay.py  make_digital_output_pulse.py  make_extended_trapezoid.py  make_extended_trapezoid_area.py  make_gauss_pulse.py  make_label.py  make_sigpy_pulse.py  make_sinc.py  make_sinc_pulse.py  make_trap.py  make_trap_pulse.py  make_trapezoid.py  make_trig.py  make_trigger.py  makearbitrary_grad.py  makearbitrary_rf.py  opts.py  (+16 more)
pypulseq/SAR/: SAR_calc.py  ruff.toml
pypulseq/Sequence/: __init__.py  block.py  calc_grad_spectrum.py  calc_pns.py  ext_test_report.py  install.py  parula.py  read_seq.py  sequence.py  test_report.py  write_seq.py
pypulseq/examples/: gre.py  gre_demo.py  haste_demo.py  ir_se_demo.py  radial_2d_fid.py  se_demo.py  se_epi_demo.py  spiral_2d_nshot.py  tse.py
pypulseq/recon_examples/: 2dFFT.py
pypulseq/seq_examples/: write_gre.py  write_tse.py
pypulseq/tests/: base.py  pytest.ini  ruff.toml  test_MPRAGE.py  test_block.py  test_calc_adc_segments.py  test_calc_duration.py  test_check_timing.py  test_epi.py  test_epi_label.py  test_epi_se.py  test_epi_se_rs.py  test_gre.py  test_gre_label.py  test_gre_radial.py  test_haste.py  test_make_adiabatic_pulse.py  test_make_block_pulse.py  test_make_extended_trapezoid_area.py  test_make_gauss_pulse.py  test_make_trapezoid.py  test_rotation3D_vs_rotation.py  test_sequence.py  test_sigpy.py  test_tse.py  test_ute.py
pypulseq/utils/: cumsum.py  k2g.py  safe_pns_prediction.py  tracing.py  vds_2d.py
seq2prospa/: convert_seq.py  make_gre.py  make_se.py  seq2prospa.py
src/pypulseq/: __init__.py  add_gradients.py  add_ramps.py  align.py  block_to_events.py  calc_duration.py  calc_ramp.py  calc_rf_bandwidth.py  calc_rf_center.py  calc_rf_power.py  check_timing.py  compress_shape.py  convert.py  event_lib.py  make_adc.py  make_adiabatic_pulse.py  make_arbitrary_grad.py  make_arbitrary_rf.py  make_block_pulse.py  make_digital_output_pulse.py  make_extended_trapezoid.py  make_extended_trapezoid_area.py  make_gauss_pulse.py  make_label.py  make_rf_shim.py  make_rotation.py  make_sigpy_pulse.py  make_sinc_pulse.py  make_soft_delay.py  make_spiral.py  make_trapezoid.py  make_trigger.py  opts.py  points_to_waveform.py  rotate.py  rotate3D.py  scale_grad.py  sigpy_pulse_opts.py  split_gradient.py  split_gradient_at.py  (+3 more)
tests/: conftest.py  ruff.toml  test_binary_signature.py  test_block.py  test_calc_adc_segments.py  test_calc_duration.py  test_calc_moments_btensor.py  test_calc_rf_power.py  test_calculate_kspace.py  test_check_timing.py  test_compat.py  test_make_adiabatic_pulse.py  test_make_block_pulse.py  test_make_extended_trapezoid_area.py  test_make_gauss_pulse.py  test_make_label.py  test_make_sinc_pulse.py  test_make_spiral.py  test_make_trapezoid.py  test_mod_grad_axis.py  test_readasc.py  test_rf_shim.py  test_rotation3D_vs_rotation.py  test_rotation_extension.py  test_scale_grad.py  test_sequence.py  test_sequence_backwards_compatibility.py  test_sequence_plot.py  test_sigpy.py  test_soft_delay.py
tests/expected_output/: seq1.seq  seq2.seq  seq3.seq  seq4.seq  seq5.seq  seq6.seq  seq_adc_only.seq  seq_ext_only.seq  seq_make_block_pulses.seq  seq_make_gauss_pulse.seq  seq_make_gauss_pulses.seq  seq_make_sinc_pulses.seq  (+27 more)
(+103 files in other folders)
