[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypulseq"
version = "1.4.2"
authors = [{ name = "Keerthi Sravan Ravi", email = "ks3621@columbia.edu" }]
maintainers = [
  { name = "Bilal Tasdelen" },
  { name = "Frank Ziljstra" },
  { name = "Patrick Schuenke" },
]
description = "Pulseq in Python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.6.3"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "coverage>=6.2",
  "matplotlib>=3.5.2",
  "numpy>=1.19.5",
  "scipy>=1.8.1",
]

[project.optional-dependencies]
sigpy = ["sigpy>=0.1.26"]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/imr-framework/pypulseq"
Issues = "https://github.com/imr-framework/pypulseq/issues"
Documentation = "https://pypulseq.readthedocs.io/en/latest/"

[tool.setuptools.package-data]
SAR = ["QGlobal.mat"]

[tool.setuptools.dynamic]
version = { attr = "version.__version__" }

# PyTest section
[tool.pytest.ini_options]
testpaths = ["pypulseq/tests"]
filterwarnings = ["error"]
markers = [
  "matlab_seq_comp: comparison with matlab generated sequence",
  "sigpy: tests that require sigpy",
]
